--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
 
   <div class="contenedor">
     <!--Nosotros-->
-    <h2 id="nosotros" class="titulo-decorado no-seleccionable">Nosotros</h2>
+    <h2 id="nosotros" class="no-seleccionable titulo-secundario">Nosotros</h2>
     <section class="nosotros">
       <div class="historia">
         <div class="scroll-animacion">
@@ -100,7 +100,7 @@
     <!--Actividades-->
 
     <div class="contenedor-actividades">
-      <h2 class="titulo-decorado no-seleccionable padding-20" id="actividades">Actividades</h2>
+      <h2 class="no-seleccionable padding-20 titulo-secundario" id="actividades">Actividades</h2>
       <section class="actividades-1">
         <article class="senderismo">
           <div class="scroll-senderismo">
@@ -165,20 +165,19 @@
 
     <!--Ubicacion-->
     <div class="contenedor-ubicacion">
-    <h2 id="ubicacion" class="titulo-decorado no-seleccionable padding-20">Ubicación</h2>
+    <h2 id="ubicacion" class="no-seleccionable padding-20 titulo-secundario">Ubicación</h2>
     <section class="ubicacion">
       <p class="centrar">Es un poblado perteneciente a la comunidad de Escárcega Campeche. Situada a 20 minutos de
         Escárcega con una vía de acceso por la carretera federal</p>
       <div class="mapa">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19304.164040405416!2d-90.58514356184618!3d18.572221698061934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85f6585944ff2003%3A0x6cc76f97ce94a405!2zMjQzNzUgQmVsw6luLCBDYW1wLiwgTcOpeGljbw!5e1!3m2!1ses-419!2sar!4v1651610151033!5m2!1ses-419!2sar"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19304.164040405416!2d-90.58514356184618!3d18.572221698061934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85f6585944ff2003%3A0x6cc76f97ce94a405!2zMjQzNzUgQmVsw6luLCBDYW1wLiwgTcOpeGljbw!5e1!3m2!1ses-419!2sar!4v1651610151033!5m2!1ses-419!2sar" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
     </div>
 
-    <h2 class="titulo-decorado no-seleccionable titulo-contacto padding-20" id="contacto">Contacto</h2>
+    <h2 class="no-seleccionable titulo-contacto padding-20" id="contacto titulo-secundario">Contacto</h2>
     <div class="contenedor-contacto">
       <section class="contacto">
         <form action="" class="contacto-form">
