mañana termino de corregir

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
 
   <div class="contenedor">
     <!--Nosotros-->
-    <h2 id="nosotros" class="no-seleccionable titulo-secundario">Nosotros</h2>
+    <h2 id="nosotros" class="no-seleccionable titulo-secundario titulo-decorado">Nosotros</h2>
     <section class="nosotros">
       <div class="historia">
         <div class="scroll-animacion">
@@ -100,7 +100,7 @@
     <!--Actividades-->
 
     <div class="contenedor-actividades">
-      <h2 class="no-seleccionable padding-20 titulo-secundario" id="actividades">Actividades</h2>
+      <h2 class="no-seleccionable padding-20 titulo-decorado titulo-secundario" id="actividades">Actividades</h2>
       <section class="actividades-1">
         <article class="senderismo">
           <div class="scroll-senderismo">
@@ -165,7 +165,7 @@
 
     <!--Ubicacion-->
     <div class="contenedor-ubicacion">
-    <h2 id="ubicacion" class="no-seleccionable padding-20 titulo-secundario">Ubicación</h2>
+    <h2 id="ubicacion" class="no-seleccionable titulo-decorado padding-20 titulo-secundario">Ubicación</h2>
     <section class="ubicacion">
       <p class="centrar">Es un poblado perteneciente a la comunidad de Escárcega Campeche. Situada a 20 minutos de
         Escárcega con una vía de acceso por la carretera federal</p>
@@ -177,7 +177,7 @@
     </section>
     </div>
 
-    <h2 class="no-seleccionable titulo-contacto padding-20" id="contacto titulo-secundario">Contacto</h2>
+    <h2 class="no-seleccionable titulo-decorado titulo-contacto padding-20 titulo-secundario" id="contacto">Contacto</h2>
     <div class="contenedor-contacto">
       <section class="contacto">
         <form action="" class="contacto-form">
